docs: add element-propagation examples to notebook

--- a/hpcflow/examples.ipynb
+++ b/hpcflow/examples.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "from hpcflow.api import (\n",
     "    WorkflowTemplate, Workflow, TaskSchema, Task, Parameter, SchemaInput, load_config,\n",
-    "    InputValue, ElementSet, InputSource, ValueSequence\n",
+    "    InputValue, ElementSet, InputSource, ValueSequence, ElementPropagation\n",
     ")\n",
     "\n",
     "# Usually the user will have a known configuration directory; this step won't be \n",
@@ -706,7 +706,23 @@
    "source": [
     "# Generate the workflow:\n",
     "wkt = WorkflowTemplate(name='w1', tasks=[t1, t2])\n",
-    "wk = Workflow.from_template(wkt, name=wkt.name, overwrite=True) "
+    "wk = Workflow.from_template(wkt, name=wkt.name, overwrite=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 4: Propagating new elements downstream"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When adding elements to a task, we can optionally propagate new elements to downstream tasks. Consider the workflow below, with three tasks, where each task depends on the previous:"
    ]
   },
   {
@@ -714,12 +730,237 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s1 = TaskSchema(objective='t1', actions=[], inputs=[p1], outputs=[p2])\n",
+    "s2 = TaskSchema(objective='t2', actions=[], inputs=[p2, p3], outputs=[p4])\n",
+    "s3 = TaskSchema(objective='t3', actions=[], inputs=[p4], outputs=[])\n",
+    "\n",
+    "t1 = Task(schemas=[s1], inputs=[InputValue(p1, 101)])\n",
+    "t2 = Task(schemas=[s2], inputs=[InputValue(p3, 301)])\n",
+    "t3 = Task(schemas=[s3], inputs=[])\n",
+    "\n",
+    "wkt = WorkflowTemplate(name='w1', tasks=[t1, t2, t3])\n",
+    "wk = Workflow.from_template(wkt, name=wkt.name, overwrite=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a single element in each task:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print([task.num_elements for task in wk.tasks])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now if we add a new element to the first task, we can specify with the `propagate_to` argument that we wish to generate new elements in downstream tasks as well. The elements generated in the downstream tasks will be restricted to depending only on the new elements generated in their respective upstream tasks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wk.tasks.t1.add_elements(\n",
+    "    inputs=[InputValue(p1, 102)],\n",
+    "    propagate_to=[]\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have an additional element in each task:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print([task.num_elements for task in wk.tasks])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that it is sufficient to specify `propagate_to` as an empty list to signify that you wish to propagate new elements downstream. There are cases where you will need to specify a nesting order for the newly generated downstream elements, in which case, `propagate_to` can be specified as a list of `ElementPropagation` objects, like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wk.tasks.t1.add_elements(\n",
+    "    inputs=[InputValue(p1, 103)],\n",
+    "    propagate_to=[\n",
+    "        ElementPropagation(task=wk.tasks.t2),\n",
+    "        ElementPropagation(task=wk.tasks.t3)\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print([task.num_elements for task in wk.tasks])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `ElementPropagation` object accepts a `nesting_order` argument, which in this case is not needed, because there are no `sequences` in the workflow. If an `ElementPropagation` object is missing for a given downstream task, a default object will be generated, with no nesting order specified. Note that there is not currently a way to propagate to only some downstream tasks. We should refine this behaviour later."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look at the input sources used for all tasks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for task in wk.tasks:\n",
+    "    print(f\"{task.name=}\")\n",
+    "    for elem_set in task.template.element_sets:\n",
+    "        print(f\"{elem_set.index=}\")\n",
+    "        for k, v in elem_set.input_sources.items():\n",
+    "            print(f\"\\t{k}: {v}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that a second (and third) element set has been generated for each task due to the `add_elements` calls on the first task. The input sources for each element set in a given task look the same, except an additional argument `elements` in the second (and third) element sets for task input sources. For example, for the second element set of the second task, the input sources for `p2` look like this:\n",
+    "\n",
+    "```\n",
+    "[InputSource.task(task_ref=0, task_source_type=output, elements=[3])]\n",
+    "```\n",
+    "\n",
+    "The `elements` argument here serves as a *contraint* on the elements from which that input can be sourced. In particular, element index 3, in this case, is the newly added element from the first task."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 5: inserting tasks in the middle of the workflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 = TaskSchema(objective='t1', actions=[], inputs=[p1], outputs=[p2])\n",
+    "s2 = TaskSchema(objective='t2', actions=[], inputs=[p2, p3], outputs=[p4])\n",
+    "\n",
+    "t1 = Task(schemas=[s1], inputs=[InputValue(p1, 101)])\n",
+    "t2 = Task(schemas=[s2], inputs=[InputValue(p3, 301)])\n",
+    "\n",
+    "wkt = WorkflowTemplate(name='w1', tasks=[t1, t2])\n",
+    "wk = Workflow.from_template(wkt, name=wkt.name, overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3 = TaskSchema(objective='t3', actions=[], inputs=[p2], outputs=[p2, p3])\n",
+    "t3 = Task(schemas=[s3])\n",
+    "wk.add_task(t3, new_index=1) # this will add the task in between the existing tasks"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that when adding a new task in the middle of the workflow, no new elements will be propagated to downstream tasks. However, in this case, we might want to add a new element to `t2` that uses outputs from the newly inserted task `t3`, which we can do like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wk.tasks.t2.add_elements()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can inspect the element sets and input sources to see what this has done (note that input source `task_ref` refers to task `insert_ID`s, since this does not change as we add/remove tasks):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for task in wk.tasks:\n",
+    "    print(f\"{task.name=} {task.insert_ID=} {task.num_elements=}\")\n",
+    "    for elem_set in task.template.element_sets:\n",
+    "        print(f\"{elem_set.index=}\")\n",
+    "        for k, v in elem_set.input_sources.items():\n",
+    "            print(f\"\\t{k}: {v}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the second element set that we added to `t2` gets its `p2` value from the newly added middle task `t3`, and its `p3` value from the first task `t1`."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hpcflow-new2-gxKrizOt-py3.10",
+   "display_name": "hpcflow-new2-zEAkg0Xp-py3.10",
    "language": "python",
    "name": "python3"
   },
@@ -738,7 +979,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "55cd5e043c79b45f41ba350049571ca6137b544f4d00a60f0ebce0f453e79d21"
+    "hash": "ddf37d14159059670ae5501c968490e36316a9e314066be903fdc4622421273c"
    }
   }
  },
