refactor: removed InputSourceMode

--- a/hpcflow/viz_demo.ipynb
+++ b/hpcflow/viz_demo.ipynb
@@ -30,7 +30,7 @@
     "from hpcflow.api import (\n",
     "    hpcflow, Workflow, WorkflowTemplate, TaskSchema, Task, Parameter, InputValue, \n",
     "    SchemaInput, ValueSequence, InputSource, SchemaOutput, InputSourceType, TaskSourceType,\n",
-    "    InputSourceMode, ElementPropagation,\n",
+    "    ElementPropagation,\n",
     ")\n",
     "from hpcflow.sdk.core.utils import read_YAML\n",
     "from hpcflow.sdk.core.errors import MissingInputs\n",
