feat: refine element propagation

--- a/hpcflow/examples.ipynb
+++ b/hpcflow/examples.ipynb
@@ -801,9 +801,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "wk.tasks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: waiting for feat/submissions fix\n",
     "wk.tasks.t1.add_elements(\n",
     "    inputs=[InputValue(p1, 102)],\n",
-    "    propagate_to=[]\n",
+    "    propagate_to={\"t2\": {}, \"t3\": {}},\n",
     ")"
    ]
   },
