--- a/.github/workflows/test_direct_sub_jupyter_notebook.ipynb
+++ b/.github/workflows/test_direct_sub_jupyter_notebook.ipynb
@@ -28,8 +28,9 @@
     "      - parameter: p2\n",
     "    actions:\n",
     "      - rules:\n",
-    "          - path: resources.os_name\n",
-    "            condition: { value.equal_to: posix }\n",
+    "          - rule:\n",
+    "              path: [resources.os_name]\n",
+    "              condition: { value.equal_to: posix }\n",
     "        environments:\n",
     "          - scope:\n",
     "              type: any\n",
@@ -38,8 +39,9 @@
     "          - command: echo \"$((<<parameter:p1>> + 100))\"\n",
     "            stdout: <<parameter:p2>>\n",
     "      - rules:\n",
-    "          - path: resources.os_name\n",
-    "            condition: { value.equal_to: nt }\n",
+    "          - rule:\n",
+    "              path: [resources.os_name]\n",
+    "              condition: { value.equal_to: nt }\n",
     "        environments:\n",
     "          - scope:\n",
     "              type: any\n",
