fix: set `status=False` in test Jupyter notebook to fix recursion error
build: bump papermill (though it did not fix the problem)

--- a/.github/workflows/test_direct_sub_jupyter_notebook.ipynb
+++ b/.github/workflows/test_direct_sub_jupyter_notebook.ipynb
@@ -54,7 +54,7 @@
     "      p1: 101\n",
     "\"\"\"\n",
     "wk = app.Workflow.from_YAML_string(YAML_str=wk_yaml, path=gettempdir())\n",
-    "wk.submit(wait=True)\n",
+    "wk.submit(wait=True, status=False)\n",
     "assert wk.tasks[0].elements[0].outputs.p2.value == \"201\""
    ]
   }
